--- a/src/main/resources/templates/custom.mustache
+++ b/src/main/resources/templates/custom.mustache
@@ -2,14 +2,15 @@
 <html>
 <head>
     <title>Create your bouquet</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
 </head>
 <style>
-    html {
+    html { 
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        background-color: rgba(99, 166, 255, 0.52);
+        background-color: white;
     }
 
     body {
@@ -18,7 +19,7 @@
         box-sizing: border-box;
         position: relative;
         min-height: 850px;
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Noto Sans JP', sans-serif;
     }
 
     .container {
@@ -49,7 +50,7 @@
         margin: 0 auto;
         height: 300px;
         border-radius: 20px;
-        border: 2px solid green;
+        border: 2px solid  blueviolet;
         margin-bottom: 40px;
     }
     .fourth_line {
@@ -65,12 +66,12 @@
         width: 45%;
         height: 100%;
         border-radius: 20px;
-        border: 2px solid green;
+        border: 2px solid blueviolet;
     }
     h1 {
         text-align: center;
         font-size: 24px;
-        color: rgb(0, 86, 37);
+        color: rgba(6, 6, 102, 0.89);
     }
     h2 {
         text-align: center;
@@ -112,9 +113,9 @@
         height: 60px;
         font-size: 24px;
         border-radius: 20px;
-        background-color: rgba(99, 166, 255, 0.52);
-        color: rgb(0, 86, 37);
-        border: 2px solid green;
+        background-color: whitesmoke;
+        color: rgba(6, 6, 102, 0.89);
+        border: 2px solid rgba(104,165,255,0.98);
         cursor: pointer;
         outline: none;
     }
@@ -122,19 +123,25 @@
         width: 20%;
         min-width: 90px;
     }
-    footer {
-        height: 40px;
-        background-color: #a69695;
-        padding-top: 25px;
-        margin-top: 40px;
-    }
     span {
         display: block;
         margin: 0 auto;
         font-size: 18px;
         text-align: center;
-        color: #dbdad9;
+        color: rgba(6, 6, 102, 0.89);
     }
+    footer {
+        height: 70px;
+        background-color: white;
+        padding-top: 60px;
+        margin-top: 60px;
+    }
+    hr {
+        border: none;
+        background-color: blueviolet;
+        color: blueviolet;
+        height: 2px;
+     }
 </style>
 <body>
     <div class="container">
@@ -220,7 +227,8 @@
             </form>
         </div>
         <footer>
-            <span>Розрахуново-графічна робота, НУЛП</span>
+           <hr>
+            <span>Software-Design documentation RGR</span>
         </footer>
     </div>
 </body>
