--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -2,25 +2,26 @@
 <html>
 <head>
     <title>Sign up</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
 </head>
 <style>
     html {
         padding: 0;
         margin: 0;
         box-sizing: border-box;
-        background-color: rgba(99,166,255,0.52);
+        background-color: white
     }
     body {
         width: 100%;
         position: relative;
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Noto Sans JP', sans-serif;
     }
     h1 {
-        color: rgba(104,165,255,0.98);
+        color:rgba(6, 6, 102, 0.89);
     }
     .sign_up_div {
-        border: 2px solid green;
+        border: 2px solid blueviolet;
         background-color: white;
         border-radius: 20px;
         padding: 20px;
@@ -30,7 +31,7 @@
         text-align: center;
     }
     .log_in_div{
-        border: 2px solid green;
+        border: 2px solid blueviolet;
         background-color: white;
         border-radius: 20px;
         padding: 20px;
@@ -50,7 +51,7 @@
         height: 40px;
         font-size: 18px;
         border-radius: 10px;
-        border: 1px solid rgba(104,165,255,0.98);
+        border: 1px solid rgba(104,165,255,0.96);
         margin-bottom: 30px;
         outline: none;
     }
@@ -59,14 +60,15 @@
         height: 40px;
         border-radius: 10px;
         margin: auto;
-        color: white;
+        color: rgba(6, 6, 102, 0.89);
+        border: 2px solid rgba(104,165,255,0.96);
         font-size: 18px;
         cursor: pointer;
         outline: none;
-        background-color: green;
+        background-color:whitesmoke;
     }
     .log_in_link, .sign_up_link {
-        color: rgba(104,165,255,0.98);
+        color: rgba(6, 6, 102, 0.89);;
         text-decoration: underline;
         font-size: 18px;
         margin: 10px auto;
@@ -98,6 +100,7 @@
         <button class="log_in_btn" type="submit">Log in</button>
     </form>
     <h2 class="sign_up_link" onclick="showSignUpForm()">Sign up</h2>
+    
 </div>
 
 <script>
